# theengs-bridge-android23

./: .gitmodules  README.md  build.gradle  gradle.bat  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cli.cpp  native.cpp
app/src/main/java/com/theengs/bridge/: BleService.java
app/src/main/res/values/: strings.xml
blob/main/app/src/main/cpp/: cli.cpp  native.cpp
blob/main/scripts/: build.sh  install-sdk.sh
